--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -15,17 +15,9 @@ body {
   width: 100%;
   height: 100vh;
   display: grid;
-  grid-template-columns: [start] 360px [mid] auto [end];
+  grid-template-columns: [start] 360px [mid] calc(100vw - 360px) [end];
   grid-template-rows: [start] 64px [mid] auto [mid2] 48px [end];
   grid-template-areas: "sidebarHeader mainBodyHeader" "sidebar mainBody" "sidebar statusBar";
-}
-
-.offlineMain {
-  width: 100%;
-  height: 100vh;
-  display: grid;
-  grid-template-rows: [start] 64px [mid] auto [end];
-  grid-template-areas: "sidebarHeader" "mainBody";
 }
 
 .statusBar {
@@ -74,51 +66,6 @@ body {
 
 .mainBody .itemsList.hiddenItems {
   overflow: hidden;
-}
-
-.sidebarHeader {
-  grid-area: sidebarHeader;
-  background: #0057cb;
-  z-index: 1000;
-}
-
-.sidebarHeader .rightSide .icon {
-  color: white !important;
-  margin: 0 16px 0 16px;
-  vertical-align: middle;
-}
-.sidebarHeaderButton {
-  vertical-align: middle;
-}
-.sidebarHeaderButton svg {
-  color: white !important;
-}
-
-.mainBodyHeader {
-  grid-area: mainBodyHeader;
-  background: #0083ff;
-  color: white;
-  box-sizing: border-box;
-  line-height: 64px;
-  vertical-align: middle;
-  z-index: 1000;
-  display: grid;
-  grid-template-rows: auto;
-  grid-template-columns: 8px 48px 8px auto auto;
-  grid-template-areas: ". icon . title buttons";
-}
-
-.deviceIconBig {
-  grid-area: icon;
-  font-size: 24px;
-  vertical-align: middle;
-  line-height: 64px;
-  text-align: center;
-}
-
-.title {
-  grid-area: title;
-  margin: 0;
 }
 
 .sleepingBear {
