Added delete value, updated overscroll behaviour and fixed minor bugs

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -9,6 +9,7 @@ body {
   font-family: Roboto, Segoe UI, sans-serif;
   -ms-content-zooming: none;
   touch-action: none;
+  overscroll-behavior-y: none;
 }
 
 .main {
