Solved double ripple bug, switched to redirects to handle navigation, prevented picture dragging

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -246,6 +246,10 @@ div[menutype="notifications"] {
   cursor: default;
 }
 
+.nonDraggable {
+  -webkit-user-drag: none;
+}
+
 input[type="text"]::-ms-clear {
   display: none;
 }
