--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -34,6 +34,7 @@ body {
 .mainBody {
   grid-area: mainBody;
   overflow-y: auto;
+  overscroll-behavior-y: contain;
   box-sizing: border-box;
   padding: 0 16px 0 16px;
 }
