Updated badges and links to MUI 3.9.0, fixed environment body crash

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -251,6 +251,10 @@ div[menutype="notifications"] {
   -webkit-user-drag: none;
 }
 
+.containOverscrollY {
+  overscroll-behavior-y: contain;
+}
+
 input[type="text"]::-ms-clear {
   display: none;
 }
